[gd_scene load_steps=5 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://bc573tcn28slu" path="res://addons/proto_controller/proto_controller.gd" id="1_ucva2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[node name="ProtoController" type="CharacterBody3D"]
script = ExtResource("1_ucva2")
max_hp = 20.0
input_left = "move_left"
input_right = "move_right"
input_forward = "move_forward"
input_back = "move_backward"
input_jump = "jump"

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="SprintUI" type="CanvasLayer" parent="Head/Camera3D"]

[node name="SprintBar" type="ProgressBar" parent="Head/Camera3D/SprintUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -56.0
offset_right = -37.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/outline_size = 6

[node name="TextureProgressBar" type="TextureProgressBar" parent="Head/Camera3D/SprintUI/SprintBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthUI" type="CanvasLayer" parent="Head/Camera3D"]

[node name="HpBar" type="ProgressBar" parent="Head/Camera3D/HealthUI"]
offset_left = 1001.0
offset_top = 549.0
offset_right = 1116.0
offset_bottom = 582.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
max_value = 20.0
allow_greater = true
allow_lesser = true
show_percentage = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="Head/Camera3D/HealthUI/HpBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HpLabel" type="Label" parent="Head/Camera3D/HealthUI/HpBar"]
layout_mode = 0
offset_right = 115.0
offset_bottom = 33.0
horizontal_alignment = 1
vertical_alignment = 1
